test/Tools/LeanCode.CodeAnalysis.Tests/TestSamples/Rejected/Contracts/Queries.cs
using LeanCode.Contracts;

namespace LeanCode.CodeAnalysis.Tests.TestSamples.Rejected.Contracts;

public class FirstQuery : IQuery { }

public class SecondQuery : FirstQuery { }
